--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             </div>
         </section>
 
-        <!-- employee feedback -->
-        <section class="row">
+        <!-- insights employee feedback -->
+        <section class="row employee_feedback">
             <div class="container-padding">
 
                 <div class="wrapper-img-survey">
@@ -178,7 +178,7 @@
 
         </section>
 
-        <!-- sezione 3 -->
+        <!-- insights sezione 3 -->
         <section class="row">
             <div class="container-padding">
 
@@ -201,8 +201,7 @@
 
         </section>
 
-        <!-- sezione 4  -->
-
+        <!--insights sezione 4  -->
         <section class="surveys">
             <div class="container-padding">
                 <div class="wrapper-text-feed">
@@ -227,7 +226,6 @@
 
         </section>
 
-        
         <section class="wrapper-teambit">
 
 
@@ -293,10 +291,6 @@
 
             </div>
         </section>
-
-
-
-
         
     </main>
 
