--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/app.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>node-sass-teambit</title>
@@ -14,13 +15,13 @@
 
 <body>
 
-    <header class="container">
+    <header class="container"  id="app">
 
-        <nav>
+        <nav >
             <div>
                 <img src="imgs/TB_logo.png" alt="logo">
             </div>
-            <ul>
+            <ul class="hidden-xs visible-sm-inline-block topnav" id="myTopnav">
                 <li><a href="#">Solutions</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Blog</a></li>
@@ -33,6 +34,9 @@
                     </button>
                 </li> 
             </ul>
+            <div class="hidden-sm visible-xs-inline-block icon" @click="hamburgerMenu">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </header>
 
@@ -366,6 +370,7 @@
         </div>
         
     </footer>
+    <script src="myScript.js"></script>
 </body>
 
 </html>
